# pyscript_3dapp_lib

./: README.md  pyproject.toml
.github/workflows/: build_whl.yml
src/pyscript_3dapp_lib/: libthree.py  utils.py
